tests/ui/invalid_result_conversion.stderr
error[E0277]: the trait bound `PyErr: From<MyError>` is not satisfied
  --> tests/ui/invalid_result_conversion.rs:22:25
   |
22 | fn should_not_work() -> Result<(), MyError> {
   |                         ^^^^^^ the trait `From<MyError>` is not implemented for `PyErr`
   |
   = help: the following other types implement trait `From<T>`:
             `PyErr` implements `From<AddrParseError>`
             `PyErr` implements `From<CastError<'_, '_>>`
             `PyErr` implements `From<CastIntoError<'_>>`
             `PyErr` implements `From<DowncastError<'_, '_>>`
             `PyErr` implements `From<DowncastIntoError<'_>>`
             `PyErr` implements `From<FromUtf8Error>`
             `PyErr` implements `From<Infallible>`
             `PyErr` implements `From<IntoInnerError<W>>`
           and 16 others
   = note: required for `MyError` to implement `Into<PyErr>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
